--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "flockn-template",
-  "version": "0.0.1",
+  "version": "0.0.1-alpha1",
   "homepage": "https://github.com/freezedev/flockn-template",
   "authors": [
     "Johannes Stein <johannesstein@freeze-dev.com>"
