--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/freezedev/flockn-template",
   "dependencies": {
-    "flockn": "0.1.0-alpha5"
+    "flockn": "0.1.0"
   },
   "devDependencies": {
     "babel-core": "^5.1.13",
